# python-decision-making

./: 001_basic.py  002_paprika.py  003_mcdm.py  Makefile  README.md  pyproject.toml
