[tool.poetry]
name = "python-decision-making"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alex.tan@bandlab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
