[tool.poetry]
name = "python-decision-making"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alex.tan@bandlab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
plotly = "^5.24.1"
black = "^24.10.0"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
